<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    tools:context="com.epicodus.madlibs.MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:id="@+id/imageView2"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:src="@drawable/sky"
        android:scaleType="centerCrop" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Mad Libs"
        android:textColor="@color/textColor"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView"
        android:textSize="50sp"
    />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/noun"
        android:textColor="@color/textColor"
        android:textColorHint="@color/textColor"
        android:background="@android:color/transparent"
        android:hint="Noun"
        android:layout_below="@+id/textView"
        android:layout_alignLeft="@+id/verb"
        android:layout_alignStart="@+id/verb"
        android:layout_marginTop="27dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/verb"
        android:textColor="@color/textColor"
        android:textColorHint="@color/textColor"
        android:background="@android:color/transparent"
        android:hint="Verb"
        android:layout_below="@+id/noun"
        android:layout_alignLeft="@+id/animal"
        android:layout_alignStart="@+id/animal"
        android:layout_marginTop="27dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/number"
        android:textColor="@color/textColor"
        android:textColorHint="@color/textColor"
        android:background="@android:color/transparent"
        android:hint="Number"
        android:layout_below="@+id/animal"
        android:layout_centerVertical="true"
        android:layout_marginTop="27dp"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/animal"
        android:textColor="@color/textColor"
        android:textColorHint="@color/textColor"
        android:background="@android:color/transparent"
        android:hint="Animal"
        android:layout_below="@+id/verb"
        android:layout_alignLeft="@+id/number"
        android:layout_alignStart="@+id/number"
        android:layout_marginTop="27dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Fun Story"
        android:id="@+id/submitButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Scary Story"
        android:id="@+id/scaryButton"
        android:layout_above="@+id/submitButton"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Love Story"
        android:id="@+id/loveButton"
        android:layout_above="@+id/scaryButton"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Choose Hero"
        android:id="@+id/textView2"
        android:textColor="@color/textColor"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/number"
        android:layout_centerHorizontal="true" />
    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

    </RadioGroup>

    <RadioButton android:id="@+id/radio_scott"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor"
        android:text="@string/Scott"
        android:onClick="onRadioButtonClicked"
        android:layout_below="@+id/textView2"
        android:layout_alignLeft="@+id/number"
        android:layout_alignStart="@+id/number" />

    <RadioButton android:id="@+id/radio_justin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor"
        android:text="@string/Justin"
        android:onClick="onRadioButtonClicked"
        android:layout_below="@+id/radio_scott"
        android:layout_alignLeft="@+id/number" />


</RelativeLayout>
